# pvm

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ko.md
.github/workflows/: release.yml
crates/pvm-cli/: Cargo.toml
crates/pvm-cli/src/: main.rs
crates/pvm-cli/src/commands/: cache.rs  completion.rs  config.rs  doctor.rs  env.rs  init.rs  migrate.rs  mod.rs  pip.rs  python.rs  update.rs
crates/pvm-core/: Cargo.toml
crates/pvm-core/src/: cache.rs  config.rs  downloader.rs  error.rs  installer.rs  lib.rs  link.rs  migrate.rs  package.rs  pip_wrapper.rs  platform.rs  venv.rs  version.rs
crates/pvm-shell/: Cargo.toml
crates/pvm-shell/src/: activation.rs  completion.rs  lib.rs
scripts/: install.sh  pvm.sh
web/: DEPLOY.md  next.config.mjs  package.json  pnpm-lock.yaml  source.config.ts
web/app/: global.css  icon.tsx  layout.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
web/app/(home)/: page.tsx
web/components/aceternity/: spotlight.tsx
web/components/icons/: github.tsx
web/components/landing/: comparison.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  install.tsx  terminal.tsx
web/components/magicui/: bento-grid.tsx  marquee.tsx
web/components/ui/: button.tsx  tabs.tsx
web/content/docs/: index.mdx  installation.mdx  meta.json  quick-start.mdx
web/content/docs/guides/: aliases.mdx  cache.mdx  completion.mdx  configuration.mdx  environments.mdx  meta.json  migration.mdx  pip-deduplication.mdx  python-management.mdx
web/content/docs/reference/: cli.mdx  directory-structure.mdx  hardlink-caveats.mdx  how-it-works.mdx  meta.json
web/lib/: layout.shared.tsx  shared.ts
