[workspace]
resolver = "2"
members = [
    "crates/pvm-core",
    "crates/pvm-cli",
    "crates/pvm-shell",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["sungjin"]
repository = "https://github.com/taintlesscupcake/pvm"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls", "stream", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

# Compression/Archive
flate2 = "1.0"
tar = "0.4"
zstd = "0.13"

# Crypto
sha2 = "0.10"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Filesystem
dirs = "5.0"
tempfile = "3.8"

# System
libc = "0.2"

# Testing
mockall = "0.13"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
