[package]
name = "pvm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for PVM - Python Version Manager"

[[bin]]
name = "pvm"
path = "src/main.rs"

[dependencies]
pvm-core = { path = "../pvm-core" }
pvm-shell = { path = "../pvm-shell" }
tokio = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
