[package]
name = "pvm-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for PVM - Python Version Manager"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
mockall = { workspace = true }
